--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,4 @@ osx_image: xcode8
 before_script: "./scripts/add-keys.sh"
 after_script: "./scripts/remove-key.sh"
 script:
-- "./scripts/swiftLint.sh"
-- "./scripts/buildPrebidMobile.sh"
-- "./scripts/testPrebidMobile.sh"
+- "./scripts/testing.sh"
