--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-language: swift
+language: objective-c
 osx_image: xcode8
 before_script: "./scripts/add-keys.sh"
 after_script: "./scripts/remove-key.sh"
 script:
-- "./scripts/testing.sh"
+- sh "./scripts/testing.sh"
