--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,6 @@ osx_image: xcode10.2
 before_script: "./scripts/add-keys.sh"
 after_script: "./scripts/remove-key.sh"
 script:
-- "./scripts/testing.sh"
+#  - "./scripts/swiftLint.sh"
+  - "./scripts/buildPrebidMobile.sh"
+  - "./scripts/testPrebidMobile.sh"
