--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ before_script: "./scripts/add-keys.sh"
 after_script: "./scripts/remove-key.sh"
 script:
 #  - "./scripts/swiftLint.sh"
-  - bash "./scripts/buildPrebidMobile.sh" || travis_terminate 1;
-  - bash "./scripts/testPrebidMobile.sh" || travis_terminate 1;
+  - bash ./scripts/buildPrebidMobile.sh || travis_terminate 1;
+  - bash ./scripts/testPrebidMobile.sh || travis_terminate 1;
