--- a/example/Swift/PrebidDemo/Podfile
+++ b/example/Swift/PrebidDemo/Podfile
@@ -6,7 +6,7 @@ target 'PrebidDemo' do
   use_frameworks!
 
   # Pods for PrebidDemo
-  pod 'Google-Mobile-Ads-SDK'
+  pod 'Google-Mobile-Ads-SDK', '7.43.0'
   pod 'mopub-ios-sdk'
 
   target 'PrebidDemoTests' do
